fixing overflow

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -139,7 +139,7 @@ nav.menu{
     /* Small devices (tablet) */
     >div{display: none;}
     @media (min-width: 0px) and (max-width: $md) {
-        translate: 100%;
+        translate: 110%;
         z-index: 20;
         position: fixed;
         top: 0;
